--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <div class="content">
         <div class="intro">
             <div class="intro-left">
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="intro-button">Sign up</button>
+                <div class="intro-left-content">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button class="intro-button">Sign up</button>
+                </div>
             </div>
             <div class="intro-right">
                 <div class="img">This is a placeholder for an image.</div>
